Fixed font on mobile screen

--- a/profile/style.css
+++ b/profile/style.css
@@ -19,6 +19,7 @@
 * {
     font-family: "Civil Premium";
     -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
